--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+        <thead>
+            <tr>
+                <th>Roll Number</th>
+                <th>Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>101</td>
+                <td>Harsh</td>
+            </tr>
+            <tr>
+                <td>102</td>
+                <td>Anjali</td>
+            </tr>
+            <!-- You can add more rows here -->
+        </tbody>
+    </table>
     <script type="text/javascript" src="./script.js">
 </script>
 
